Implementado menu mis anuncios y mis reservas
Implementado menu mis anuncios y mis reservas, y varias mejoras visuales

--- a/AppMovil/LuckyPets/app/src/main/res/layout/activity_my_balance.xml
+++ b/AppMovil/LuckyPets/app/src/main/res/layout/activity_my_balance.xml
@@ -62,8 +62,8 @@
             android:hint="00.00"
             android:padding="16dp"
             android:singleLine="true"
-            android:textColor="#17A4EA"
-            android:textColorHint="#17A4EA"
+            android:textColor="#D9C8C6"
+            android:textColorHint="#D9C8C6"
             android:textSize="20sp" />
 
         <TextView
