--- a/AppMovil/LuckyPets/app/src/main/res/layout/activity_principal.xml
+++ b/AppMovil/LuckyPets/app/src/main/res/layout/activity_principal.xml
@@ -47,13 +47,12 @@
 
     <EditText
         android:id="@+id/EditText_MyBalance_Now"
-        android:layout_width="145dp"
+        android:layout_width="185dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
-        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:layout_marginEnd="16dp"
         android:background="@drawable/background_view_2"
         android:drawablePadding="15dp"
         android:editable="false"
@@ -61,8 +60,9 @@
         android:fontFamily="@font/merriweather_bold"
         android:hint="00.00"
         android:padding="16dp"
-        android:textColor="#17A4EA"
-        android:textColorHint="#17A4EA"
+        android:textColor="#D9C8C6"
+        android:textColorHint="#D9C8C6"
+        android:textAlignment="center"
         android:textSize="20sp" />
 
     <EditText
