--- a/AppMovil/LuckyPets/app/src/main/res/layout/popup_menu.xml
+++ b/AppMovil/LuckyPets/app/src/main/res/layout/popup_menu.xml
@@ -7,6 +7,18 @@
     android:padding="8dp">
 
     <TextView
+        android:id="@+id/action_my_reservations"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:fontFamily="@font/merriweather_bold"
+        android:padding="12dp"
+        android:text="Reservas"
+        android:textColor="@color/custom_menu_text_color"
+        android:textSize="20dp" />
+
+    <TextView
         android:id="@+id/action_my_posts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,7 +38,7 @@
         android:focusable="true"
         android:fontFamily="@font/merriweather_bold"
         android:padding="12dp"
-        android:text="Mis datos personales"
+        android:text="Datos personales"
         android:textColor="@color/custom_menu_text_color"
         android:textSize="20dp" />
 
