--- a/AppMovil/LuckyPets2/app/src/main/res/layout/activity_post.xml
+++ b/AppMovil/LuckyPets2/app/src/main/res/layout/activity_post.xml
@@ -58,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:text="Eliminar anuncio"
-                    android:textColor="#92736F"
+                    android:textColor="#006495"
                     android:fontFamily="@font/merriweather_bold"
                     android:layout_marginTop="10dp"
                     android:textSize="16sp" />
@@ -100,8 +100,8 @@
                     android:id="@+id/txtProvincia"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_regular"
-                    android:textColor="#92736F"
+                    android:fontFamily="@font/merriweather_bold"
+                    android:textColor="#006495"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -122,8 +122,30 @@
                     android:id="@+id/txtDuracion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_regular"
+                    android:fontFamily="@font/merriweather_bold"
+                    android:textColor="#006495"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="30dp">
+                <TextView
+                    android:id="@+id/labelCoste"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/merriweather_bold"
+                    android:text="Coste: "
                     android:textColor="#92736F"
+                    android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/txtCoste"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/merriweather_bold"
+                    android:textColor="#006495"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -144,8 +166,8 @@
                     android:id="@+id/txtTelefonoPost"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_regular"
-                    android:textColor="#92736F"
+                    android:fontFamily="@font/merriweather_bold"
+                    android:textColor="#006495"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -153,7 +175,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="30dp">
+                android:layout_marginBottom="100dp">
                 <TextView
                     android:id="@+id/labelDescripcion"
                     android:layout_width="wrap_content"
@@ -167,10 +189,51 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/merriweather_regular"
-                    android:textColor="#92736F"
+                    android:textColor="#006495"
                     android:textSize="16sp" />
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/botoneraUsuario"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnReservar"
+                    android:layout_width="121dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/background_view_yellow"
+                    android:onClick="Reservar"
+                    android:text="Reservar"
+                    android:textColor="#DAC9C7"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/btnLlamar"
+                    android:layout_width="121dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/background_view_green"
+                    android:onClick="Llamar"
+                    android:text="Llamar"
+                    android:textColor="#DAC9C7"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btnConfirmarTransaccion"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/background_view_blue"
+                android:layout_gravity="center"
+                android:text="Confirmar Transacción"
+                android:textColor="#DAC9C7"
+                android:textSize="16sp"
+                android:visibility="gone" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
