--- a/AppMovil/LuckyPets2/app/src/main/res/layout/popup_menu.xml
+++ b/AppMovil/LuckyPets2/app/src/main/res/layout/popup_menu.xml
@@ -7,6 +7,30 @@
     android:padding="8dp">
 
     <TextView
+        android:id="@+id/action_my_reservations"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:fontFamily="@font/merriweather_bold"
+        android:padding="12dp"
+        android:text="Reservas"
+        android:textColor="@color/custom_menu_text_color"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/action_my_posts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:fontFamily="@font/merriweather_bold"
+        android:padding="12dp"
+        android:text="Mis anuncios"
+        android:textColor="@color/custom_menu_text_color"
+        android:textSize="20dp" />
+
+    <TextView
         android:id="@+id/action_my_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,31 +38,20 @@
         android:focusable="true"
         android:fontFamily="@font/merriweather_bold"
         android:padding="12dp"
-        android:text="Mis datos personales"
+        android:text="Datos personales"
         android:textColor="@color/custom_menu_text_color"
         android:textSize="20dp" />
 
+
     <TextView
-        android:id="@+id/action_change_email"
+        android:id="@+id/action_help"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
         android:fontFamily="@font/merriweather_bold"
         android:padding="12dp"
-        android:text="Cambiar correo electrónico"
-        android:textColor="@color/custom_menu_text_color"
-        android:textSize="20dp" />
-
-    <TextView
-        android:id="@+id/action_change_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:fontFamily="@font/merriweather_bold"
-        android:padding="12dp"
-        android:text="Cambiar contraseña"
+        android:text="Ayuda"
         android:textColor="@color/custom_menu_text_color"
         android:textSize="20dp" />
 
