Implementada la logica para confirmar y abonar una reserva con tokens CR
Implementada la logica para confirmar y abonar una reserva con tokens CR

--- a/AppMovil/LuckyPets/app/src/main/res/layout/activity_post.xml
+++ b/AppMovil/LuckyPets/app/src/main/res/layout/activity_post.xml
@@ -257,6 +257,17 @@
                 android:textSize="16sp"
                 android:visibility="gone" />
 
+            <Button
+                android:id="@+id/btnCompletado"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/background_view_green"
+                android:layout_gravity="center"
+                android:text="Completado"
+                android:textColor="#DAC9C7"
+                android:textSize="16sp"
+                android:visibility="gone" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
