--- a/AppMovil/LuckyPets2/app/src/main/res/layout/activity_post.xml
+++ b/AppMovil/LuckyPets2/app/src/main/res/layout/activity_post.xml
@@ -229,7 +229,8 @@
                     android:background="@drawable/background_view_green"
                     android:text="Llamar"
                     android:textColor="#DAC9C7"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:onClick="Llamar" />
             </LinearLayout>
 
             <Button
@@ -240,6 +241,30 @@
                 android:background="@drawable/background_view_blue"
                 android:layout_gravity="center"
                 android:text="Confirmar Transacción"
+                android:textColor="#DAC9C7"
+                android:textSize="16sp"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/btnPendienteReserva"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/background_view_yellow"
+                android:layout_gravity="center"
+                android:text="Pendiente de Reserva"
+                android:textColor="#DAC9C7"
+                android:textSize="16sp"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/btnCompletado"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/background_view_green"
+                android:layout_gravity="center"
+                android:text="Completado"
                 android:textColor="#DAC9C7"
                 android:textSize="16sp"
                 android:visibility="gone" />
