--- a/AppMovil/LuckyPets/app/src/main/res/layout/popup_menu.xml
+++ b/AppMovil/LuckyPets/app/src/main/res/layout/popup_menu.xml
@@ -67,6 +67,12 @@
         android:textColor="@color/custom_menu_text_color"
         android:textSize="20dp" />
 
+    <View
+        android:layout_width="170dp"
+        android:layout_height="1dp"
+        android:background="@color/custom_menu_text_color"
+        android:layout_marginVertical="8dp" />
+
     <TextView
         android:id="@+id/logOut"
         android:layout_width="match_parent"
