--- a/AppMovil/LuckyPets/app/src/main/res/layout/activity_post.xml
+++ b/AppMovil/LuckyPets/app/src/main/res/layout/activity_post.xml
@@ -82,28 +82,53 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/placeholder_image_2"/>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="30dp">
+
                 <TextView
-                    android:id="@+id/labelProvincia"
+                    android:id="@+id/txtRating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/merriweather_bold"
-                    android:text="Provincia: "
-                    android:textColor="#92736F"
-                    android:textSize="18sp" />
-                <TextView
-                    android:id="@+id/txtProvincia"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_bold"
+                    android:text="4.7"
                     android:textColor="#006495"
-                    android:textSize="16sp" />
-            </LinearLayout>
+                    android:textSize="18sp"
+                    android:layout_marginLeft="340dp"
+                    android:layout_gravity="center_vertical" />
+
+                <ImageView
+                    android:id="@+id/imgEstrellas"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/star_rate"
+                    android:layout_marginEnd="16dp"
+                    android:contentDescription="Valoración media" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/labelProvincia"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/merriweather_bold"
+                        android:text="Provincia: "
+                        android:textColor="#92736F"
+                        android:textSize="18sp" />
+                    <TextView
+                        android:id="@+id/txtProvincia"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/merriweather_bold"
+                        android:textColor="#006495"
+                        android:textSize="16sp" />
+                </LinearLayout>
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
